refactor:upgraded to springboot 3.4.0